--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -90,7 +90,7 @@
       <img src="/img/slide4.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block text-white">
         <h5>Inhlawhna</h5>
-        <p>Zirlai pakhat hmuhin Rs. 500/- zel hlawh theih a ni.</p>
+        <p>Inhlawhna mamawh tan Miss Hlui leh Miss Tetei biak theih a ni.</p>
       </div>
     </div>
   </div>
