--- a/views/dca104onlineclasschapter1.ejs
+++ b/views/dca104onlineclasschapter1.ejs
@@ -249,7 +249,7 @@ Cyber Crime).
 </p><p>
 4. Software that is distributed for free on a trial basis is called <br><b>Ans... </b> shareware.
 </p><p>
-5. ________ changes an arrow of a mouse to a pointing hand <br><b>Ans... </b>
+5. ________ changes an arrow of a mouse to a pointing hand <br><b>Ans... </b> hyperlink.
 </p><p>
 6. When someone is TYPING AN ENTIRE SENTENCE IN ALL CAPITAL LETTERS, that person is <br><b>Ans... </b> SHOUTING. <br> <em>It is not proper netiquette to TYPE IN ALL CAPS, especially in e-mail.</em>
 </p><p>
