--- a/views/dca1semOnlineLessonChapter1.ejs
+++ b/views/dca1semOnlineLessonChapter1.ejs
@@ -796,7 +796,7 @@ a) Accuracy b) Versatility c) No Feeling d) Strong IQ }
                   
                   <p class="fs-5 fw-light mt-3">
                     
-                   Q5. Generation of computer for the year 2021 is ________?
+                   Q5. Generation of computer for the year 2021 belong to the ________?
                    
                   </p>
                   
