--- a/views/paid_unpaid_account.ejs
+++ b/views/paid_unpaid_account.ejs
@@ -38,7 +38,7 @@ An assignment chhanna hi Internal Assessment mark-ah a remchan dan angin hman th
 </p>
 <h2 class="display-6 text-muted">Unpaid Account</h2>
 <p>Kan zirlaite zingah fee engmah la pe lo, admission la tawh si an awm thei a. Hei hi unpaid account a ni. Zirlai dangte ang bawkin kan
-website-ah an luh ve theih vek a, amaherawhchu, lesson zawng zawng an chhang thei lo va, subject tinah chapter-1 chauh an chhangin an zir thei a ni.
+website-ah an lut ve thei vek a, amaherawhchu, lesson zawng zawng an chhang thei lo va, subject tinah chapter-1 chauh an chhangin an zir thei a ni.
 </p>
 <p>Kan zirlai la ni lo; demo id leh password hmanga website chhunga lut chhinte pawh hi unpaid account an ni.</p>
 <h2 class="display-6 text-muted">Paid Account</h2>
