delete button on assignment

--- a/views/dca102onlineclasschapter10.ejs
+++ b/views/dca102onlineclasschapter10.ejs
@@ -395,7 +395,7 @@ the OS then the computer is ready to be used, this process is called <br><b>Ans.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -478,7 +478,7 @@ the OS then the computer is ready to be used, this process is called <br><b>Ans.
                 
                  <a href="/assignment/delete102/<%= studentId %>/<%= thisStudent.assignmentTheory102[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
