--- a/views/dca102onlineclasschapter2.ejs
+++ b/views/dca102onlineclasschapter2.ejs
@@ -453,7 +453,7 @@ the category are as follows.</p>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -536,7 +536,7 @@ the category are as follows.</p>
                 
                  <a href="/assignment/delete102/<%= studentId %>/<%= thisStudent.assignmentTheory102[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
