--- a/views/dca102onlineclasschapter3.ejs
+++ b/views/dca102onlineclasschapter3.ejs
@@ -330,7 +330,7 @@ and the latest in the series is  Windows  10  (July  29, 2015).
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -413,7 +413,7 @@ and the latest in the series is  Windows  10  (July  29, 2015).
                 
                  <a href="/assignment/delete102/<%= studentId %>/<%= thisStudent.assignmentTheory102[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
