--- a/views/dca103onlineclasschapter11.ejs
+++ b/views/dca103onlineclasschapter11.ejs
@@ -315,7 +315,7 @@ Note: <em>Sheet dangah i thil chhut i move duh chuan mouse hmanga i pawh tawlh l
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -392,7 +392,7 @@ Note: <em>Sheet dangah i thil chhut i move duh chuan mouse hmanga i pawh tawlh l
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
