--- a/views/dca103onlineclasschapter19.ejs
+++ b/views/dca103onlineclasschapter19.ejs
@@ -295,7 +295,7 @@ option available under the Background group in the Design tab.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -378,7 +378,7 @@ option available under the Background group in the Design tab.
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
