--- a/views/dca103onlineclasschapter6.ejs
+++ b/views/dca103onlineclasschapter6.ejs
@@ -344,7 +344,7 @@ another portion of the document is <br><b>Ans... </b> Format painter
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -426,7 +426,7 @@ another portion of the document is <br><b>Ans... </b> Format painter
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
