--- a/views/dca103onlineclasschapter9.ejs
+++ b/views/dca103onlineclasschapter9.ejs
@@ -329,7 +329,7 @@ a) Chart b) Clipart c) WordArt e) Graph
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -406,7 +406,7 @@ a) Chart b) Clipart c) WordArt e) Graph
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
