--- a/views/dca104onlineclasschapter1.ejs
+++ b/views/dca104onlineclasschapter1.ejs
@@ -391,7 +391,7 @@ institutions or for purpose of committing financial crime? <br><b>Ans... </b> Sa
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -474,7 +474,7 @@ institutions or for purpose of committing financial crime? <br><b>Ans... </b> Sa
                 
                  <a href="/assignment/delete104/<%= studentId %>/<%= thisStudent.assignmentTheory104[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
