--- a/views/dca104onlineclasschapter6.ejs
+++ b/views/dca104onlineclasschapter6.ejs
@@ -348,7 +348,7 @@
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -429,7 +429,7 @@
                 
                  <a href="/assignment/delete104/<%= studentId %>/<%= thisStudent.assignmentTheory104[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
