--- a/views/dca105onlineclasschapter11.ejs
+++ b/views/dca105onlineclasschapter11.ejs
@@ -350,7 +350,7 @@ The Save Selection dialog box appears. Here you can specify the name of your sel
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -417,7 +417,7 @@ The Save Selection dialog box appears. Here you can specify the name of your sel
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
