--- a/views/dca105onlineclasschapter12.ejs
+++ b/views/dca105onlineclasschapter12.ejs
@@ -349,7 +349,7 @@ a bit different from its original. These kinds of filters create effects, such a
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -432,7 +432,7 @@ a bit different from its original. These kinds of filters create effects, such a
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
