--- a/views/dca105onlineclasschapter3.ejs
+++ b/views/dca105onlineclasschapter3.ejs
@@ -355,7 +355,7 @@ iii) Click layer menu and click layer properties… <br>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -438,7 +438,7 @@ iii) Click layer menu and click layer properties… <br>
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
