--- a/views/dca105onlineclasschapter4.ejs
+++ b/views/dca105onlineclasschapter4.ejs
@@ -346,7 +346,7 @@ the layer from the Channels palette to the Delete current channel button at the 
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -429,7 +429,7 @@ the layer from the Channels palette to the Delete current channel button at the 
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
