--- a/views/dca105onlineclasschapter6.ejs
+++ b/views/dca105onlineclasschapter6.ejs
@@ -324,7 +324,7 @@ pointer is over the layer content to which you want to apply the style.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -394,7 +394,7 @@ pointer is over the layer content to which you want to apply the style.
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
