--- a/views/dca106onlineclasschapter14.ejs
+++ b/views/dca106onlineclasschapter14.ejs
@@ -346,7 +346,7 @@ By default layers are named according to the order in which they were created. <
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -413,7 +413,7 @@ By default layers are named according to the order in which they were created. <
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
