--- a/views/dca106onlineclasschapter4.ejs
+++ b/views/dca106onlineclasschapter4.ejs
@@ -401,7 +401,7 @@ professionals-quality layout and types styles
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -484,7 +484,7 @@ professionals-quality layout and types styles
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
