--- a/views/dca106onlineclasschapter8.ejs
+++ b/views/dca106onlineclasschapter8.ejs
@@ -404,7 +404,7 @@ development is : <br><b>Ans... </b>  Thumbnails, rough layout, comprehensive lay
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -487,7 +487,7 @@ development is : <br><b>Ans... </b>  Thumbnails, rough layout, comprehensive lay
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
