--- a/views/dca106onlineclasschapter9.ejs
+++ b/views/dca106onlineclasschapter9.ejs
@@ -429,7 +429,7 @@ If the palette is in character view, click the paragraph – view button to disp
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -512,7 +512,7 @@ If the palette is in character view, click the paragraph – view button to disp
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
