--- a/views/dca1semOnlineLessonChapter3.ejs
+++ b/views/dca1semOnlineLessonChapter3.ejs
@@ -431,7 +431,7 @@ temporary basis is known as <br><b>Ans... </b> Register
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -514,7 +514,7 @@ temporary basis is known as <br><b>Ans... </b> Register
                 
                  <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
