--- a/views/dca1semOnlineLessonChapter4.ejs
+++ b/views/dca1semOnlineLessonChapter4.ejs
@@ -397,7 +397,7 @@ digital cameras and solid-state drives.</p>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -480,7 +480,7 @@ digital cameras and solid-state drives.</p>
                 
                  <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
