--- a/views/dca1semOnlineLessonChapter5.ejs
+++ b/views/dca1semOnlineLessonChapter5.ejs
@@ -473,7 +473,7 @@ Note: <em>A page printer is a computer printer which processes and prints a, who
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -556,7 +556,7 @@ Note: <em>A page printer is a computer printer which processes and prints a, who
                 
                  <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
