--- a/views/dca1semOnlineLessonChapter7.ejs
+++ b/views/dca1semOnlineLessonChapter7.ejs
@@ -413,7 +413,7 @@ its equivalent machine language program is <br><b>Ans... </b> Assembler
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -496,7 +496,7 @@ its equivalent machine language program is <br><b>Ans... </b> Assembler
                 
                  <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
