--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -65,32 +65,32 @@
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" class="d-none d-sm-block" aria-label="Slide 4"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="20000">
+    <div class="carousel-item active" data-bs-interval="10000">
       <img src="/img/slide1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
           <h5>Assignment</h5>
-        <p>Assignment i chhan hmain chhiar chiang hmasa la, hmanhmawh suh ang che.</p>
+        <p>Text section-ah assignment answer a awm zel; chhiar chiang hmasa ang che.</p>
       </div>
     </div>
-    <div class="carousel-item" data-bs-interval="20000">
+    <div class="carousel-item" data-bs-interval="10000">
       <img src="/img/slide2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
         <h5>Internal</h5>
+        <p>Assignment chhanna hi Internal Mark atan hman tur a ni.</p>
+      </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="10000">
+      <img src="/img/slide3.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-md-block text-white">
+        <h5>Internal Mark</h5>
         <p>Assignment chhang dik vek tan internal mark 20-ah 20 hmuh theih a ni.</p>
       </div>
     </div>
-    <div class="carousel-item" data-bs-interval="20000">
-      <img src="/img/slide3.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-md-block text-white">
-        <h5>Theory</h5>
-        <p>Assignment hi board exam hmain chhan zawh vek tur a ni.</p>
-      </div>
-    </div>
-    <div class="carousel-item" data-bs-interval="20000">
+    <div class="carousel-item" data-bs-interval="10000">
       <img src="/img/slide4.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block text-white">
-        <h5>Inhlawhna</h5>
-        <p>Inhlawhna mamawh tan Miss Hlui leh Miss Tetei biak theih a ni.</p>
+        <h5>Admission Open</h5>
+        <p>December Batch Admission hawn mek a ni. I lo sawi darh ve dawn nia.</p>
       </div>
     </div>
   </div>
