--- a/views/dca102onlineclasschapter1.ejs
+++ b/views/dca102onlineclasschapter1.ejs
@@ -352,7 +352,7 @@ utility programs and other software packages to various users working on the com
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -435,7 +435,7 @@ utility programs and other software packages to various users working on the com
                 
                  <a href="/assignment/delete102/<%= studentId %>/<%= thisStudent.assignmentTheory102[i]._id %>" onclick="return confirm('He record i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
