--- a/views/dca102onlineclasschapter4.ejs
+++ b/views/dca102onlineclasschapter4.ejs
@@ -371,7 +371,7 @@ iii) On the extreme right is the notification area.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -454,7 +454,7 @@ iii) On the extreme right is the notification area.
                 
                  <a href="/assignment/delete102/<%= studentId %>/<%= thisStudent.assignmentTheory102[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
