--- a/views/dca102onlineclasschapter5.ejs
+++ b/views/dca102onlineclasschapter5.ejs
@@ -386,7 +386,7 @@ Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin t
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -469,7 +469,7 @@ Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin t
                 
                  <a href="/assignment/delete102/<%= studentId %>/<%= thisStudent.assignmentTheory102[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
