--- a/views/dca102onlineclasschapter6.ejs
+++ b/views/dca102onlineclasschapter6.ejs
@@ -452,7 +452,7 @@ network computer even if the computer does not have internet connection <br><b>A
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -535,7 +535,7 @@ network computer even if the computer does not have internet connection <br><b>A
                 
                  <a href="/assignment/delete102/<%= studentId %>/<%= thisStudent.assignmentTheory102[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
