--- a/views/dca102onlineclasschapter8.ejs
+++ b/views/dca102onlineclasschapter8.ejs
@@ -408,7 +408,7 @@ programs and then we highlight <br><b>Ans... </b> Accessories
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -491,7 +491,7 @@ programs and then we highlight <br><b>Ans... </b> Accessories
                 
                  <a href="/assignment/delete102/<%= studentId %>/<%= thisStudent.assignmentTheory102[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
