--- a/views/dca102onlineclasschapter9.ejs
+++ b/views/dca102onlineclasschapter9.ejs
@@ -499,7 +499,7 @@ The most common MS-DOS internal command is listed below:-
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -582,7 +582,7 @@ The most common MS-DOS internal command is listed below:-
                 
                  <a href="/assignment/delete102/<%= studentId %>/<%= thisStudent.assignmentTheory102[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
