--- a/views/dca103onlineclasschapter1.ejs
+++ b/views/dca103onlineclasschapter1.ejs
@@ -333,7 +333,7 @@ paragraphs and lines included in the word document => Word count option
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -415,7 +415,7 @@ paragraphs and lines included in the word document => Word count option
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
