--- a/views/dca103onlineclasschapter10.ejs
+++ b/views/dca103onlineclasschapter10.ejs
@@ -331,7 +331,7 @@ after editing we use <br><b>Ans... </b> Save as
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -401,7 +401,7 @@ after editing we use <br><b>Ans... </b> Save as
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
