--- a/views/dca103onlineclasschapter12.ejs
+++ b/views/dca103onlineclasschapter12.ejs
@@ -305,7 +305,7 @@ a) Character b) Date/time c) Number d) Label
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -382,7 +382,7 @@ a) Character b) Date/time c) Number d) Label
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
