--- a/views/dca103onlineclasschapter13.ejs
+++ b/views/dca103onlineclasschapter13.ejs
@@ -355,7 +355,7 @@ On the office button, click print, and then click selection under print what.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -440,7 +440,7 @@ On the office button, click print, and then click selection under print what.
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
