--- a/views/dca103onlineclasschapter14.ejs
+++ b/views/dca103onlineclasschapter14.ejs
@@ -364,7 +364,7 @@ Given: student X's mark Obtained is 72 <br><b>Ans... </b> <b>Passed</b> <br>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -448,7 +448,7 @@ Given: student X's mark Obtained is 72 <br><b>Ans... </b> <b>Passed</b> <br>
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
