--- a/views/dca103onlineclasschapter15.ejs
+++ b/views/dca103onlineclasschapter15.ejs
@@ -318,7 +318,7 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -395,7 +395,7 @@ a) =power(2^3 b) =power(2#3) c) =power(2*3) d) =power(2,3)
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
