--- a/views/dca103onlineclasschapter16.ejs
+++ b/views/dca103onlineclasschapter16.ejs
@@ -331,7 +331,7 @@ charts, Updating charts, changing the chart type, previewing and printing charts
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -408,7 +408,7 @@ charts, Updating charts, changing the chart type, previewing and printing charts
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
