--- a/views/dca103onlineclasschapter17.ejs
+++ b/views/dca103onlineclasschapter17.ejs
@@ -320,7 +320,7 @@ worksheet is link <br><b>Ans... </b> True
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -398,7 +398,7 @@ worksheet is link <br><b>Ans... </b> True
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
