--- a/views/dca103onlineclasschapter18.ejs
+++ b/views/dca103onlineclasschapter18.ejs
@@ -318,7 +318,7 @@ your presentation <br><b>Ans... </b> Slide sorter view
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -395,7 +395,7 @@ your presentation <br><b>Ans... </b> Slide sorter view
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
