--- a/views/dca103onlineclasschapter20.ejs
+++ b/views/dca103onlineclasschapter20.ejs
@@ -310,7 +310,7 @@ computer? <br><b>Ans... </b> Pack and Go
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -392,7 +392,7 @@ computer? <br><b>Ans... </b> Pack and Go
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
