--- a/views/dca103onlineclasschapter5.ejs
+++ b/views/dca103onlineclasschapter5.ejs
@@ -296,7 +296,7 @@ lowercase and uppercase with uppercase automatically.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -359,7 +359,7 @@ lowercase and uppercase with uppercase automatically.
                 
                  <a href="/assignment/delete103/<%= studentId %>/<%= thisStudent.assignmentTheory103[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
