--- a/views/dca104onlineclasschapter4.ejs
+++ b/views/dca104onlineclasschapter4.ejs
@@ -368,7 +368,7 @@ junior officer using web cameras and internet facilities. This is called <br><b>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -451,7 +451,7 @@ junior officer using web cameras and internet facilities. This is called <br><b>
                 
                  <a href="/assignment/delete104/<%= studentId %>/<%= thisStudent.assignmentTheory104[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
