--- a/views/dca104onlineclasschapter5.ejs
+++ b/views/dca104onlineclasschapter5.ejs
@@ -402,7 +402,7 @@ server, or network? <br><b>Ans... </b> Nodes
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -485,7 +485,7 @@ server, or network? <br><b>Ans... </b> Nodes
                 
                  <a href="/assignment/delete104/<%= studentId %>/<%= thisStudent.assignmentTheory104[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
