--- a/views/dca105onlineclasschapter1.ejs
+++ b/views/dca105onlineclasschapter1.ejs
@@ -312,7 +312,7 @@ Components of Photoshop Window, Using the Toolbox, Using Palettes, Opening and S
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -395,7 +395,7 @@ Components of Photoshop Window, Using the Toolbox, Using Palettes, Opening and S
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
