--- a/views/dca105onlineclasschapter10.ejs
+++ b/views/dca105onlineclasschapter10.ejs
@@ -362,7 +362,7 @@ iii) Click the Delete icon at the bottom of the panel, and then click Yes.<br>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -445,7 +445,7 @@ iii) Click the Delete icon at the bottom of the panel, and then click Yes.<br>
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
