--- a/views/dca105onlineclasschapter5.ejs
+++ b/views/dca105onlineclasschapter5.ejs
@@ -344,7 +344,7 @@ The <code>second </code>method for applying an adjustment is non-destructive and
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -418,7 +418,7 @@ The <code>second </code>method for applying an adjustment is non-destructive and
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
