--- a/views/dca105onlineclasschapter7.ejs
+++ b/views/dca105onlineclasschapter7.ejs
@@ -329,7 +329,7 @@ same path. There are sections in a path defined by anchor points.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -412,7 +412,7 @@ same path. There are sections in a path defined by anchor points.
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
