--- a/views/dca105onlineclasschapter8.ejs
+++ b/views/dca105onlineclasschapter8.ejs
@@ -319,7 +319,7 @@ watching the effects of your adjustments on the original image.<br>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -388,7 +388,7 @@ watching the effects of your adjustments on the original image.<br>
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
