--- a/views/dca105onlineclasschapter9.ejs
+++ b/views/dca105onlineclasschapter9.ejs
@@ -323,7 +323,7 @@ To use the Color Variations command:<br>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -403,7 +403,7 @@ To use the Color Variations command:<br>
                 
                  <a href="/assignment/delete105/<%= studentId %>/<%= thisStudent.assignmentTheory105[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
