--- a/views/dca106onlineclasschapter1.ejs
+++ b/views/dca106onlineclasschapter1.ejs
@@ -345,7 +345,7 @@ The Control Palette changes according to the tool selected in the toolbox.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -427,7 +427,7 @@ The Control Palette changes according to the tool selected in the toolbox.
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
