--- a/views/dca106onlineclasschapter11.ejs
+++ b/views/dca106onlineclasschapter11.ejs
@@ -344,7 +344,7 @@ have professionals-quality layout and types styles.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -411,7 +411,7 @@ have professionals-quality layout and types styles.
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
