--- a/views/dca106onlineclasschapter12.ejs
+++ b/views/dca106onlineclasschapter12.ejs
@@ -404,7 +404,7 @@ placed in a new publication for printing.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -471,7 +471,7 @@ placed in a new publication for printing.
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
