--- a/views/dca106onlineclasschapter13.ejs
+++ b/views/dca106onlineclasschapter13.ejs
@@ -366,7 +366,7 @@ print separations or color composites <br><b>Ans... </b> CMYK
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -433,7 +433,7 @@ print separations or color composites <br><b>Ans... </b> CMYK
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
