--- a/views/dca106onlineclasschapter5.ejs
+++ b/views/dca106onlineclasschapter5.ejs
@@ -418,7 +418,7 @@ illustration programs
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -501,7 +501,7 @@ illustration programs
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
