--- a/views/dca106onlineclasschapter6.ejs
+++ b/views/dca106onlineclasschapter6.ejs
@@ -377,7 +377,7 @@ of document will start from <br><b>Ans... </b> 10
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -460,7 +460,7 @@ of document will start from <br><b>Ans... </b> 10
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
