--- a/views/dca106onlineclasschapter7.ejs
+++ b/views/dca106onlineclasschapter7.ejs
@@ -458,7 +458,7 @@ by using option from Utilities > Plug-ins <br><b>Ans... </b> Keyline
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -541,7 +541,7 @@ by using option from Utilities > Plug-ins <br><b>Ans... </b> Keyline
                 
                  <a href="/assignment/delete106/<%= studentId %>/<%= thisStudent.assignmentTheory106[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
