--- a/views/dca1semOnlineLessonChapter1.ejs
+++ b/views/dca1semOnlineLessonChapter1.ejs
@@ -394,7 +394,7 @@ a) Accuracy b) Versatility c) No Feeling d) Strong IQ }
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -475,7 +475,7 @@ a) Accuracy b) Versatility c) No Feeling d) Strong IQ }
                 
                  <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
