--- a/views/dca1semOnlineLessonChapter10.ejs
+++ b/views/dca1semOnlineLessonChapter10.ejs
@@ -450,7 +450,7 @@ Y2K - Year Two Thousand</p>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -533,7 +533,7 @@ Y2K - Year Two Thousand</p>
                 
                  <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
