--- a/views/dca1semOnlineLessonChapter2.ejs
+++ b/views/dca1semOnlineLessonChapter2.ejs
@@ -372,7 +372,7 @@ the computer users. Examples are the Computer monitor and the computer printer.
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -455,7 +455,7 @@ the computer users. Examples are the Computer monitor and the computer printer.
                 
                  <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
