--- a/views/dca1semOnlineLessonChapter8.ejs
+++ b/views/dca1semOnlineLessonChapter8.ejs
@@ -368,7 +368,7 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -451,7 +451,7 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
                 
                  <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
