--- a/views/dca1semOnlineLessonChapter9.ejs
+++ b/views/dca1semOnlineLessonChapter9.ejs
@@ -354,7 +354,7 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                             
               <th>Dated</th>
               
-              <th>Action</th>
+              <th>Delete</th>
 
             </tr>
             
@@ -437,7 +437,7 @@ crowd such as Shopping mall, Airport, Metros, Railway Station etc. </p>
                 
                  <a href="/assignment/delete101/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('He record hi i delete duh em ni?');">
                   
-                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+                  <i class="far fa-trash-alt p-1 text-danger" aria-hidden="true"></i></a>
               
               </td>
   
